# bowling_game_coach

./: .gitignore  Readme.md  docker-compose.yml
backend/: .dockerignore  .env_sample  Dockerfile  auth.py  database.py  main.py  models.py  pdf_reader.py  pyproject.toml  rag_pipeline.py  requirements.txt  test_db.py
backend/routers/: __init__.py  games.py  users.py
frontend/: .dockerignore  Dockerfile
frontend/docker/: nginx.conf
frontend/src/: App.js
frontend/src/pages/: Auth.js  Board.css  Board.js
