[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend app"
authors = ["Richard Brawley <richard.frank1991125@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.118.0,<0.119.0"
uvicorn = ">=0.37.0,<0.38.0"
sqlalchemy = ">=2.0.43,<3.0.0"
sqlalchemy-utils = ">=0.42.0,<0.43.0"
pgvector = ">=0.4.1,<0.5.0"
psycopg = { version = ">=3.2.10,<4.0.0", extras = ["binary"] }
passlib = { version = ">=1.7.4,<2.0.0", extras = ["bcrypt"] }
python-jose = { version = ">=3.5.0,<4.0.0", extras = ["cryptography"] }
haystack-ai = ">=2.18.1,<3.0.0"
pgvector-haystack = ">=5.2.1,<6.0.0"
openai = ">=2.0.1,<3.0.0"
transformers = ">=4.56.2,<5.0.0"
sentence-transformers = ">=5.1.1,<6.0.0"
python-multipart = ">=0.0.20,<0.0.21"
python-dotenv = "^1.0.1"
pypdf = ">=6.1.1,<7.0.0"
rsa = "4.9.1"   # <-- avoids yanked 4.2

# torch is isolated so Poetry doesn't try to solve it
[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
torch = "2.8.0+cpu"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
